--- a/server/package.json
+++ b/server/package.json
@@ -10,5 +10,8 @@
   "keywords": [],
   "type": "module",
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "dotenv": "^17.2.3"
+  }
 }
